[gd_scene load_steps=17 format=2]

[ext_resource path="res://scripts/ui/hud.gd" type="Script" id=1]
[ext_resource path="res://textures/entity/syringe_sheet.png" type="Texture" id=2]
[ext_resource path="res://textures/ui/ui_sheet.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 128, 32, 32, 31 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 128, 64, 32, 31 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 128, 96, 32, 31 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 160, 32, 32, 31 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 160, 64, 32, 31 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 160, 96, 32, 31 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 192, 32, 32, 31 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 192, 64, 32, 31 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 192, 96, 32, 31 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 96, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 0, 32, 16, 16 )

[node name="HUD" type="CanvasLayer"]
layer = 100
script = ExtResource( 1 )
slug_juice1 = SubResource( 3 )
slug_juice2 = SubResource( 4 )
slug_juice3 = SubResource( 5 )
slime_juice1 = SubResource( 10 )
slime_juice2 = SubResource( 11 )
slime_juice3 = SubResource( 12 )
amoeba_juice1 = SubResource( 14 )
amoeba_juice2 = SubResource( 15 )
amoeba_juice3 = SubResource( 16 )

[node name="FPS" type="Label" parent="."]
margin_right = 89.0
margin_bottom = 14.0
text = "FPS: 0"

[node name="Vials" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -32.0
margin_right = 104.0
mouse_filter = 2
custom_constants/separation = 16
alignment = 1

[node name="Slug" type="TextureProgress" parent="Vials"]
margin_right = 32.0
margin_bottom = 32.0
mouse_filter = 0
max_value = 10.0
value = 10.0
texture_over = SubResource( 1 )
fill_mode = 3

[node name="Sticker" type="TextureRect" parent="Vials/Slug"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 6 )
stretch_mode = 4

[node name="Label" type="Label" parent="Vials/Slug/Sticker"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "1"
align = 1
valign = 1

[node name="Slime" type="TextureProgress" parent="Vials"]
margin_left = 48.0
margin_right = 80.0
margin_bottom = 32.0
mouse_filter = 0
max_value = 10.0
value = 10.0
texture_over = SubResource( 1 )
fill_mode = 3

[node name="Sticker" type="TextureRect" parent="Vials/Slime"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 9 )
stretch_mode = 4

[node name="Label" type="Label" parent="Vials/Slime/Sticker"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "1"
align = 1
valign = 1

[node name="Amoeba" type="TextureProgress" parent="Vials"]
margin_left = 96.0
margin_right = 128.0
margin_bottom = 32.0
mouse_filter = 0
max_value = 10.0
value = 10.0
texture_over = SubResource( 1 )
fill_mode = 3

[node name="Sticker" type="TextureRect" parent="Vials/Amoeba"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 13 )
stretch_mode = 4

[node name="Label" type="Label" parent="Vials/Amoeba/Sticker"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "1"
align = 1
valign = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[connection signal="gui_input" from="Vials/Slug" to="." method="_on_Slug_gui_input"]
[connection signal="gui_input" from="Vials/Slime" to="." method="_on_Slime_gui_input"]
[connection signal="gui_input" from="Vials/Amoeba" to="." method="_on_Amoeba_gui_input"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
